--- a/wiki/CreatingJSClasses.wiki
+++ b/wiki/CreatingJSClasses.wiki
@@ -401,7 +401,7 @@ An interesting feature of class binding framework is that it's compile-time type
 
 ==Extra internal fields==
 
-The `WeakJSClassCreatorOps<T>` interface defines a constant integer value names `ExtraInternalFieldCount`, which can normally be left at 0.
+The `WeakJSClassCreatorOps<T>` interface defines a constant integer value named `ExtraInternalFieldCount`, which can normally be left at 0.
 
 If a wrapper needs access to more internal fields for client-side use,
 define `ExtraInternalFieldCount` to be some other number. In v8 client
@@ -411,13 +411,12 @@ interfering with this convention, `WeakJSClassCreator` stores its
 internal binding at field number N (that is, one past the last
 client-defined field). When the class is defined the internal field
 count is set to (`ExtraInternalFieldCount`+1) and the wrapper
-internals use that last position for its internal use. The client is
+internals use that last position for their own purposes. The client is
 then free to use slots 0..(N-1), as is conventional.
 
 That said, i haven't yet seen any v8 client code which would benefit
 from having more than one internal data field. Might be handy in some
-cases, but it would in general seem easier to bind one native object and
-store any other bound data there.
+cases, but it would in general seem easier to bind only one native object (i.e. the `T` type wrapped by `WeakJSClassCreator<T>`) and store any other bound data in that native object.
 
 =Real-world examples=
 
