--- a/wiki/ConvertingTypes.wiki
+++ b/wiki/ConvertingTypes.wiki
@@ -65,7 +65,8 @@ Good luck!
 ==Custom native-to-JS conversions==
 
 To make our own types support work with `CastToJS()` we have to provide
-template specialization for `NativeToJS<>`, as shown below.
+template specialization for `NativeToJS<>`. The example shown here works
+in conjunction with [CreatingJSClasses WeakJSClassCreator] to do the conversion:
 
 {{{
 namespace v8 { namespace juice { namespace convert {
@@ -104,11 +105,6 @@ struct JSToNative<MyType>
        // This impl works together with WeakJSClassCreator():
        return ::v8::juice::WeakJSClassCreator<MyType>::GetNative( h );
     }
-    // This overload is an evolutionary artefact and will likely be removed from the API at some point:
-    result_type operator()( ::v8::juice::bind::BindKeyType, Handle<Value> const & jv ) const
-    {
-        return this->operator()( h );
-    }
 };
 } } } // namespaces
 }}}
@@ -135,11 +131,11 @@ The problem here is ownership and lifetime of the string bytes. v8 does not docu
 
 The `v8::juice::convert` namespace contains functions named `FwdToFuncN()`, where `N` is the number of arguments they expect, which use the casting framework to marshal calls between JS and native functions.
 
-The [CreatingClasses ClassBinder class] can also bind member functions.
+The [CreatingJSClasses ClassBinder class] can also bind member functions.
 
 TODOs:
   * Refactor `FwdToFuncN()` to use a mechanism similar to what the !ClassBinder member bindings do, as this allows us to use `void` return types.
-  * Consolidate the `FwdToFuncN()` and !ClassBinder call forwarding API. Right now they are completely separate beasts and have some inconsistencies (e.g. !ClassBinder's code can handle void returns whereas `FwdToFunc` cannot.
+  * Consolidate the `FwdToFuncN()` and !ClassBinder call forwarding API. Right now they are completely separate beasts and have some inconsistencies (e.g. !ClassBinder's code can handle void returns whereas `FwdToFunc` cannot).
 
 =Silly Examples=
 
